--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@
         <nav>
             <ul>
                 <li><a href="/#/">Shelter</a></li>
-                <li><a href="food">Food</a></li>P
+                <li><a href="food">Food</a></li>
                 <li><a href="resume">Resume</a></li>
                 <li><a href="health">Health</a></li>
             </ul>
