--- a/health.html
+++ b/health.html
@@ -118,7 +118,7 @@
             <ul>
                 <li><a href="/#/">Shelter</a></li>
                 <li><a href="food">Food</a></li>
-                <!-- <li><a href="resume">Resume</a></li> --->
+                <li><a href="resume">Resume</a></li>
                 <li><a href="health">Health</a></li>
             </ul>
         </nav>
